# codex_frag

./: .gitignore  README.md  pyproject.toml
codex/: __init__.py  bias.py  blades.py  clocks.py  decaimiento.py  dialogo.py  embeddings.py  grafo_mundo.py  hechos.py  loadout.py  memetario.py  modelos.py  persistencia.py  prompts.py  reglas.py  reloj.py  singularidades.py  transmision.py
codex/llm/: __init__.py  gemini_client.py  mock_client.py
codex_frag_docs_y_skills/docs/: ANALISIS_ARQUITECTO_ESTADO_Y_RUMBO.md  CORPUS_DISENO.md  PROMPT_PASOS_3_4_5.md  PROMPT_PASO_2.md
demos/: experimento_04_ab.py  prueba_paso1.py  prueba_paso2.py  prueba_paso3.py
docs/: MAPA_REUSO_FRAY_TOMAS.md  PROMPT_PASOS_3_4_5.md  PROMPT_PASO_1.md  PROMPT_PASO_2.md  REVISION_INTEGRAL.md  TALLER_DISENO.md  VERIFICACION_CODIGO_FRAY_TOMAS.md  VISION_FASE0.md
docs/adr/: ADR-002-reglas-enchufables.md  ADR-003-estado-en-archivos-portables.md  ADR-005-capas-de-costo-degradacion-elegante.md  ADR-006-estratificacion-de-complejidad.md  ADR-007-contenido-enchufable.md
docs/mejoras_serie_completa/: INSTRUCCIONES_SESION.md
mundos/experimento_04/: grafo.json  taller_bitacora.jsonl
mundos/prueba/: grafo.json  singularidades.json  (+1 more)
taller/: app.py  bitacora.py  derivacion.py  index.html  servidor.py
templates/: derivar_ser.txt  dialogo.txt  mutacion.txt  narracion_score.txt  tension.txt
test manuales/: GUIA_DE_VEREDICTOS.md
tests/: test_blades.py  test_clocks.py  test_decaimiento.py  test_derivacion.py  test_dialogo.py  test_dos_seres.py  test_embeddings.py  test_gemini_client.py  test_grafo_mundo.py  test_loadout.py  test_memetario.py  test_mock_client.py  test_persistencia.py  test_reglas.py  test_reloj_bias.py  test_singularidades.py  test_taller.py  test_transmision.py
(+40 files in other folders)
